extensive logging tools added

--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(core STATIC GEngine.cpp)
 
-add_subdirectory(Bruh)
-target_link_libraries(core PRIVATE Bruh)
+add_subdirectory(Util)
+target_link_libraries(core PRIVATE Util)
