new entity component system started

--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -2,3 +2,9 @@ add_library(core STATIC GEngine.cpp)
 
 add_subdirectory(Util)
 target_link_libraries(core PRIVATE Util)
+
+add_subdirectory(Scene)
+target_link_libraries(core PRIVATE Scene)
+
+add_subdirectory(Components)
+target_link_libraries(core PRIVATE Position)
