ecs and ease of use changes

--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -7,4 +7,7 @@ add_subdirectory(Scene)
 target_link_libraries(core PRIVATE Scene)
 
 add_subdirectory(Components)
-target_link_libraries(core PRIVATE Position)
+target_link_libraries(core PRIVATE PositionComponent)
+
+add_subdirectory(Systems)
+target_link_libraries(core PRIVATE PositionSystem)
