--- a/core/src/Components/CMakeLists.txt
+++ b/core/src/Components/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(Position Position.cpp Position.h)
-target_include_directories(Position PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(PositionComponent PositionComponent.cpp PositionComponent.h)
+target_include_directories(PositionComponent PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
