TimerComponent and system added

--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -8,3 +8,4 @@ target_link_libraries(core PRIVATE Scene)
 
 add_subdirectory(Systems)
 target_link_libraries(core PRIVATE PositionSystem)
+target_link_libraries(core PRIVATE TimerSystem)
