--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -9,3 +9,9 @@ target_link_libraries(core PRIVATE Scene)
 add_subdirectory(Systems)
 target_link_libraries(core PRIVATE PositionSystem)
 target_link_libraries(core PRIVATE TimerSystem)
+
+add_subdirectory(Runtime)
+target_link_libraries(core PRIVATE Runtime)
+target_link_libraries(core PRIVATE Logic)
+target_link_libraries(core PRIVATE Render)
+target_link_libraries(core PRIVATE Audio)
