render data sorting + ecs updates

--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -15,3 +15,4 @@ target_link_libraries(core PRIVATE Runtime)
 target_link_libraries(core PRIVATE Logic)
 target_link_libraries(core PRIVATE Render)
 target_link_libraries(core PRIVATE Audio)
+target_link_libraries(core PRIVATE ThreadData)
