--- a/core/src/Runtime/Threads/CMakeLists.txt
+++ b/core/src/Runtime/Threads/CMakeLists.txt
@@ -6,3 +6,6 @@ target_include_directories(Render PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(Audio Audio.cpp Audio.h)
 target_include_directories(Audio PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+add_library(ThreadData ThreadData.cpp ThreadData.h)
+target_include_directories(ThreadData PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
