Threading architecture and render architecture redo

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -2,6 +2,15 @@
 
 add_subdirectory(src)
 
+target_link_libraries(core
+    PRIVATE
+    glfw
+    GLEW::GLEW
+    ${OPENGL_LIBRARIES}
+    "-framework Cocoa"
+    "-framework IOKit"
+)
+
 target_compile_options(core PRIVATE 
     -Wall
     -pedantic
